# algolotl-ta

./: Cargo.toml  README.md
src/: adaptive_moving_average.rs  candles.rs  change_percent.rs  cointegration.rs  decimal.rs  digital_signal_processor.rs  empirical_mode_decomposition.rs  enhanced_signal_to_noise_ratio.rs  even_better_sinewave.rs  instantaneous_trendline_filter.rs  lib.rs  ohlcv.rs  rate_of_change.rs  super_smoother_filter.rs  window.rs
