[package]
name = "algolotl-ta"
version = "0.1.0"
edition = "2021"
authors = ["Tim Koopmans <tim.koops@gmail.com>"]
license = "MIT"
description = "Technical analysis library for algolotl"

[dependencies]
rust_decimal = { version = "1.35.0", features = ["serde-arbitrary-precision", "maths"] }
rust_decimal_macros = "1.35.0"
serde = { version = "1.0.209", features = ["derive"] }
yata = { version = "0.7.0", features = ["period_type_u16"] }
tradestats = "0.1.14"